{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 35,
  "lineage": "4454b67c-6565-b8af-20d2-c59fe55c22e5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:internet-gateway/igw-208ca649",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-3b01f653"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-3b01f653"
                ]
              }
            ],
            "id": "igw-208ca649",
            "internet_gateway_id": "igw-208ca649",
            "owner_id": "190032868844"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:vpc/vpc-3b01f653",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-1c77ae74",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-f3639f9b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3b01f653",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3bef2853",
            "owner_id": "190032868844",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:vpc/vpc-3b01f653",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-fee61e96",
            "default_route_table_id": "rtb-3bef2853",
            "default_security_group_id": "sg-07452965",
            "dhcp_options_id": "dopt-f3639f9b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3b01f653",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3bef2853",
            "owner_id": "190032868844"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:190032868844:loadbalancer/kkp-demo-api-lb",
            "availability_zones": [
              "eu-west-3a",
              "eu-west-3b",
              "eu-west-3c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "kkp-demo-api-lb-1198546431.eu-west-3.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "kkp-demo-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-03f63573f112ad1aa",
              "i-0424d50318ae015a3",
              "i-0af92635e79f81723"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "kkp-demo-api-lb",
            "security_groups": [
              "sg-018c2398ab8e477a1",
              "sg-0223766c92dfe920c"
            ],
            "source_security_group": "190032868844/kkp-demo-common",
            "source_security_group_id": "sg-018c2398ab8e477a1",
            "subnets": [
              "subnet-0408936d9155217f7",
              "subnet-0a8fb4d09d01c11cb",
              "subnet-0dd86e5cd3ebd6c9f"
            ],
            "tags": {
              "Cluster": "kkp-demo",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Cluster": "kkp-demo",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03569f6d482517724",
            "arn": "arn:aws:ec2:eu-west-3:190032868844:instance/i-09e2498e248f6f61b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e2498e248f6f61b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "kkp-demo-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0132dcbf875739877",
            "private_dns": "ip-172-31-78-42.eu-west-3.compute.internal",
            "private_ip": "172.31.78.42",
            "public_dns": "ec2-15-237-72-244.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.72.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0bda25130cb4ff31c",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kkp-demo-common",
              "kkp-demo-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8fb4d09d01c11cb",
            "tags": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-bastion",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-bastion",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018c2398ab8e477a1",
              "sg-0c40d678e1369e557"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03569f6d482517724",
            "arn": "arn:aws:ec2:eu-west-3:190032868844:instance/i-03f63573f112ad1aa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kkp-demo-host",
            "id": "i-03f63573f112ad1aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kkp-demo-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4812ea382be4e83",
            "private_dns": "ip-172-31-78-203.eu-west-3.compute.internal",
            "private_ip": "172.31.78.203",
            "public_dns": "ec2-52-47-117-88.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.117.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-051ffb7f002fee4fd",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kkp-demo-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8fb4d09d01c11cb",
            "tags": {
              "Name": "kkp-demo-cp-1",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Name": "kkp-demo-cp-1",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018c2398ab8e477a1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03569f6d482517724",
            "arn": "arn:aws:ec2:eu-west-3:190032868844:instance/i-0424d50318ae015a3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kkp-demo-host",
            "id": "i-0424d50318ae015a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kkp-demo-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-055d8e58cb63debdb",
            "private_dns": "ip-172-31-79-69.eu-west-3.compute.internal",
            "private_ip": "172.31.79.69",
            "public_dns": "ec2-35-180-228-213.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.228.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-04c7ee9743a2e4579",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kkp-demo-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd86e5cd3ebd6c9f",
            "tags": {
              "Name": "kkp-demo-cp-2",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Name": "kkp-demo-cp-2",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018c2398ab8e477a1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03569f6d482517724",
            "arn": "arn:aws:ec2:eu-west-3:190032868844:instance/i-0af92635e79f81723",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kkp-demo-host",
            "id": "i-0af92635e79f81723",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "kkp-demo-deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3958c59726d27d7",
            "private_dns": "ip-172-31-80-63.eu-west-3.compute.internal",
            "private_ip": "172.31.80.63",
            "public_dns": "ec2-35-180-178-142.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.178.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-05bbc0af0a56668a3",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "kkp-demo-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0408936d9155217f7",
            "tags": {
              "Name": "kkp-demo-cp-3",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Name": "kkp-demo-cp-3",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018c2398ab8e477a1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "data.aws_ami.ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:security-group/sg-018c2398ab8e477a1",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018c2398ab8e477a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "186.154.121.207/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "186.154.121.207/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow all incomming traffic from members of this group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "kkp-demo-common",
            "name_prefix": "",
            "owner_id": "190032868844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "kkp-demo",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Cluster": "kkp-demo",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-3b01f653"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:security-group/sg-0223766c92dfe920c",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0223766c92dfe920c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "kkp-demo-api-lb",
            "name_prefix": "",
            "owner_id": "190032868844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "kkp-demo"
            },
            "tags_all": {
              "Cluster": "kkp-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-3b01f653"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:security-group/sg-0c40d678e1369e557",
            "description": "ssh access",
            "egress": [],
            "id": "sg-0c40d678e1369e557",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "kkp-demo-ssh",
            "name_prefix": "",
            "owner_id": "190032868844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "kkp-demo"
            },
            "tags_all": {
              "Cluster": "kkp-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-3b01f653"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-168150811",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-018c2398ab8e477a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-2858308044",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-018c2398ab8e477a1",
            "self": true,
            "source_security_group_id": "sg-018c2398ab8e477a1",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:subnet/subnet-0a8fb4d09d01c11cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.78.0/24",
            "id": "subnet-0a8fb4d09d01c11cb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190032868844",
            "tags": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-eu-west-3a",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-eu-west-3a",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "vpc_id": "vpc-3b01f653"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "random_integer.cidr_block",
            "aws_default_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:subnet/subnet-0dd86e5cd3ebd6c9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.31.79.0/24",
            "id": "subnet-0dd86e5cd3ebd6c9f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190032868844",
            "tags": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-eu-west-3b",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-eu-west-3b",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "vpc_id": "vpc-3b01f653"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:190032868844:subnet/subnet-0408936d9155217f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.31.80.0/24",
            "id": "subnet-0408936d9155217f7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190032868844",
            "tags": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-eu-west-3c",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "tags_all": {
              "Cluster": "kkp-demo",
              "Name": "kkp-demo-eu-west-3c",
              "kubernetes.io/cluster/kkp-demo": "shared"
            },
            "vpc_id": "vpc-3b01f653"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available",
            "data.aws_vpc.selected",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}